<resources>
    <string name="app_name">Experimental</string>

    <!--Error messages-->
    <string name="unknown_error">Unknown error</string>
    <string name="network_error">Network error</string>
    <string name="not_modified_error">304 Not Modified</string>
    <string name="bad_request_error">400 Bad Request</string>
    <string name="unauthorized_error">401 Unauthorized</string>
    <string name="forbidden_error">403 Forbidden</string>
    <string name="not_found_error">404 Not Found</string>
    <string name="method_not_allowed_error">405 Method Not Allowed</string>
    <string name="conflict_error">409 Conflict</string>
    <string name="unprocessable_error">422 Unprocessable</string>
    <string name="server_error_error">500 Server Error</string>
    <string name="timeout_error">TimeOut Exception</string>
    <string name="empty_error">Empty data</string>
    <string name="empty_error_description">Data is empty.\nPlease try again later.</string>
    <string name="refresh">Refresh</string>
    <string name="empty_data">Empty data</string>
    <string name="empty_data_description">You have not data yet.\nPlease try again later.</string>
    <string name="cache_error">Can not save data!</string>
    <string name="use_case_error">UseCase scheduler failed!</string>
    <string name="frag_movies_movie_rating">Rating:</string>
    <string name="frag_movies_popular_toolbar_title">Popular</string>
    <string name="frag_movie_details_poster_content_description">Movie Poster</string>
    <string name="frag_movie_details_tagline">TagLine:</string>
    <string name="frag_movie_details_overview">Overview:</string>
    <string name="frag_movie_details_rating">Rating:</string>
    <string name="movie_item_transition_name">moviePoster</string>
    <string name="movie_details_transition_name">DetailsPoster</string>
    <string name="frag_movie_details_release_date">Release date:</string>
    <string name="frag_movie_details_budget">Budget:</string>
    <string name="frag_movie_details_status">Status:</string>
    <string name="frag_movie_details_adult">18+</string>
</resources>
