<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/contentDetails"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/collapsingAppBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsingToolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleMarginStart="@dimen/toolbar_title_margin"
            app:layout_scrollFlags="scroll|exitUntilCollapsed|snap">

            <ImageView
                android:id="@+id/imgMoviePoster"
                android:layout_width="match_parent"
                android:layout_height="@dimen/movie_details_poster_height"
                android:layout_centerHorizontal="true"
                android:contentDescription="@string/frag_movie_details_poster_content_description"
                android:fitsSystemWindows="true"
                android:scaleType="centerCrop"
                android:transitionName="@string/movie_item_transition_name"
                app:layout_collapseMode="parallax" />

            <TextView
                android:id="@+id/tvAdult"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|bottom"
                android:layout_margin="@dimen/default_margin"
                android:background="@drawable/circle_background"
                android:clickable="false"
                android:gravity="center"
                android:text="@string/frag_movie_details_adult"
                android:textColor="@color/white"
                app:layout_collapseMode="parallax"
                android:visibility="gone"/>

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbarDetails"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin" />

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/default_padding">

            <TextView
                android:id="@+id/tvMovieTagLineTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/frag_movie_details_tagline"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/details_text_title_size" />

            <TextView
                android:id="@+id/tvMovieTagLine"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/movie_details_text_margin"
                android:textColor="@color/colorPrimary" />

            <TextView
                android:id="@+id/tvMovieOverviewTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/movie_details_text_margin"
                android:text="@string/frag_movie_details_overview"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/details_text_title_size" />

            <TextView
                android:id="@+id/tvMovieOverview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/movie_details_text_margin"
                android:textColor="@color/colorPrimary" />

            <TextView
                android:id="@+id/tvMovieRatingTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/movie_details_text_margin"
                android:text="@string/frag_movie_details_rating"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/details_text_title_size" />

            <RatingBar
                android:id="@+id/ratingBarMovieDetails"
                style="?android:attr/ratingBarStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/movie_details_text_margin"
                android:isIndicator="true"
                android:numStars="10" />

            <TextView
                android:id="@+id/tvMovieReleaseDateTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/movie_details_text_margin"
                android:text="@string/frag_movie_details_release_date"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/details_text_title_size" />

            <TextView
                android:id="@+id/tvMovieReleaseDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/movie_details_text_margin"
                android:textColor="@color/colorPrimary" />

            <TextView
                android:id="@+id/tvMovieBudgetTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/movie_details_text_margin"
                android:text="@string/frag_movie_details_budget"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/details_text_title_size" />

            <TextView
                android:id="@+id/tvMovieBudget"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/movie_details_text_margin"
                android:textColor="@color/colorPrimary" />

            <TextView
                android:id="@+id/tvMovieStatusTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/movie_details_text_margin"
                android:text="@string/frag_movie_details_status"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/details_text_title_size" />

            <TextView
                android:id="@+id/tvMovieStatus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/movie_details_text_margin"
                android:textColor="@color/colorPrimary" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <ProgressBar
        android:id="@+id/progressDetails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>
